--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+:root{
+ --color-light:#fff;
+  --color-dark: #27292a;
+  --color-darkest: #1f2122;
+  --color-primary:#ec6090;
+
+  --color-bg-body: var(--color-darkest);
+
+  --distance-primary: 50px;
+  --margin-primary:var(--distance-primary);
+  --padding-primary: var(--distance-primary);
+  --border-radius-primary: calc(var(--distance-primary) / 2);
+
+ --font-weight-normal:400;
+ --font-weight-bold:700;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: var(--color-bg-body);
+  font-family: 'Poppins', sans-serif;
 }
